# CarRec

build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CarRec.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/detect/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Detect.sln  cmake_install.cmake  detect.vcxproj  detect.vcxproj.filters
build2/feature/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Train.sln  cmake_install.cmake  feature.vcxproj  feature.vcxproj.filters
code/: CMakeLists.txt
code/detect/: CMakeLists.txt
code/detect/src/: cvmat_serilization.h  detect.cpp
code/feature/: CMakeLists.txt
code/feature/src/: feature.cpp
data/pos/000-000/: 1car1.txt  1car11.txt  1car12.txt  1car14.txt  1car2.txt  1car3.txt  1car5.txt  1car6.txt  1car7.txt  1car9.txt  2car1.txt  2car11.txt  2car12.txt  2car14.txt  2car2.txt  2car3.txt  2car5.txt  2car6.txt  2car7.txt  2car9.txt  car1.txt  car11.txt  car12.txt  car14.txt  car2.txt  car3.txt  car5.txt  car6.txt  car7.txt  car9.txt  feature.txt
data/pos/022-090/: 1car1.txt  1car11.txt  1car12.txt  1car14.txt  1car2.txt  1car3.txt  1car5.txt  1car6.txt  1car7.txt  1car9.txt  car1.txt  car11.txt  car12.txt  car14.txt  car2.txt  car3.txt  car5.txt  car6.txt  car7.txt  car9.txt  feature.txt
data/pos/022-180/: 1car1.txt  1car11.txt  1car12.txt  1car14.txt  1car2.txt  1car3.txt  1car5.txt  1car6.txt  1car7.txt  1car9.txt  car1.txt  car11.txt  car12.txt  car14.txt  car2.txt  car3.txt  car5.txt  car6.txt  car7.txt  car9.txt  feature.txt
data/pos/022-270/: 1car1.txt  (+20 more)
(+813 files in other folders)
